--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "bootstrap": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-open-weather": "^1.1.7",
     "react-scripts": "4.0.3",
+    "react-select-country-list": "^2.2.3",
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.2"
   },
