--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.0",
+    "country-state-city": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-open-weather": "^1.1.7",
     "react-scripts": "4.0.3",
-    "react-select-country-list": "^2.2.3",
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.2"
   },
